feat(payment): Phase C EU Stripe payments and gateway-aware refunds
Enable True E2E payments for DOM001 (DE/EUR): manager refund list routes
(canonical + aliases), Stripe/Razorpay/synthetic refund execution, cash EUR,
dev seed for demo txs, and verify-phase-c-e2e script. Never commit Stripe secrets.